# youtube-shorts-automation

./: Dockerfile  LICENSE  README.md  auth.py  config.py  create_scheduler.sh  credentials.json  deploy.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py
data/: analytics_report.csv  client_secrets.json  credentials.json  token.json  video_list.json
src/: .env  __init__.py  main.py
src/analysis/: __init__.py  analyze.py
src/collection/: __init__.py  collect.py
src/core/: __init__.py  auth.py  config.py  ffmpeg_utils.py  logging_config.py  youtube_api.py
src/core/data/: client_secret.json  video_list.json
src/processing/: __init__.py  process.py
src/upload/: __init__.py  upload.py
youtube_shorts_automation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
